refactor app.js

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-  <header>Calculator!</header>
+  <header>Calculator</header>
+  <h1>Do Some Math Motherfucker!</h1>
   <table>
     <tr>
       <th colspan='5' id='results'></th>
@@ -16,26 +17,26 @@
       <td><button id='1'>1</button></td>
       <td><button id='2'>2</button></td>
       <td><button id='3'>3</button></td>
-      <td><button id='plus'>+</button></td>
-      <td><button id='minus'>-</button></td>
+      <td><button id='11'>+</button></td>
+      <td><button id='12'>-</button></td>
     </tr>
     <tr>
       <td><button id='4'>4</button></td>
       <td><button id='5'>5</button></td>
       <td><button id='6'>6</button></td>
-      <td><button id='times'>X</button></td>
-      <td><button id='divide'>/</button></td>
+      <td><button id='13'>X</button></td>
+      <td><button id='14'>/</button></td>
     </tr>
     <tr>
       <td><button id='7'>7</button></td>
       <td><button id='8'>8</button></td>
       <td><button id='9'>9</button></td>
-      <td><button id='expo'>^</button></td>
+      <td><button id='15'>^</button></td>
       <td><button id='root'>sqrt</button></td>
     </tr>
     <tr>
       <td><button id='0'>0</button></td>
-      <td><button id='dec'>.</button></td>
+      <td><button id='10'>.</button></td>
       <td><button id='equal'>=</button></td>
       <td colspan='2'><button class='btn' id='clear'>clear</button></td>
     </tr>
